<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:minHeight="0dp"
            app:buttonGravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@id/cvAvatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/blue"
            app:title="@string/hardcoded_user_name"
            app:titleCentered="true"
            app:titleTextColor="@color/white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAvatar"
            android:layout_width="@dimen/user_avatar_size"
            android:layout_height="@dimen/user_avatar_size"
            android:layout_marginTop="@dimen/common_padding_high"
            app:cardCornerRadius="@dimen/user_avatar_corner_radius"
            app:cardElevation="@dimen/user_avatar_card_elevation"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintBottom_toTopOf="@id/llUserInfoFields"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topAppBar">

            <ImageView
                android:id="@+id/imgUserAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/photo" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/llUserInfoFields"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/user_data_horizontal_margin"
            android:layout_marginTop="@dimen/user_data_top_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvAvatar">

            <TextView
                style="@style/user_data_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_default"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/user_data_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hardcoded_email" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_mail"
                    app:tint="@color/blue" />

            </LinearLayout>

            <TextView
                style="@style/user_data_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_mobile_phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_default"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/user_data_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hardcoded_mobile_phone_number" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_phone"
                    app:tint="@color/blue" />

            </LinearLayout>

            <TextView
                style="@style/user_data_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_complete_name" />

            <TextView
                style="@style/user_data_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_default"
                android:text="@string/hardcoded_user_name" />

            <TextView
                style="@style/user_data_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_office" />

            <TextView
                style="@style/user_data_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_padding_default"
                android:text="@string/hardcoded_office" />

            <TextView
                style="@style/user_data_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_about_me" />

            <TextView
                style="@style/user_data_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hardcoded_about_me" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>